# retail-dss-project

./: .gitignore  API.md  POS_UYGULAMA_PLANI.md  PROJECT_STRUCTURE.md  README.md  YEDEK_KURULUM_KILAVUZU.md  debug_email.py  deploy.bat  email_debug_log.txt  find_store_coords.py  read_log.py  render.yaml  simulate_geofence_test.py  simulate_real_sale.py  simulation_email_check.txt  supabase_schema.sql  test_output.txt  test_welcome_email.py
backend/: .gitignore  analyze_current_db.py  backend_log_8001.txt  backend_log_8001_final.txt  backend_log_8001_new.txt  database.py  debug_async.py  debug_test_client.py  debug_update.py  export_engine.py  fast_update.py  import_forecasts.py  insert_dummy_store.py  main.py  models.py  pyproject.toml  requirements.txt  risk_engine.py  schemas.py  seed.py  simulation_engine.py  sync_engine.py  test_loyalty.py  test_pos_modern.py  test_refactor.py  transfer_engine.py  verify_api.py  verify_backend.py  verify_data_fix.py  verify_export.py  verify_full_system.py  verify_pos_tables.py
backend/core/: config.py  email.py  exceptions.py  handlers.py  logger.py
backend/routers/: analytics.py  customers.py  integrations.py  marketing.py  pos.py  products.py  sales.py  simulation.py  stores.py  transfers.py  users.py  utils.py
backend/scripts/: clean_duplicates.py  list_users.py  reset_user.py  run_backend.bat  test_email.py
backend/services/: email_service.py  loyalty_service.py  marketing_service.py  receipt_service.py  weather_service.py
backend/tests/: test_barcode_flow.py  test_nearby_store.py  test_phase6.py  test_pos_ingestion.py  (+4 more)
(+105 files in other folders)
